Fix centered align contact items

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -383,9 +383,10 @@ a {
 }
 
 .contact-item__texts-container {
-  justify-content: center;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 .contact-item__avatar-container {
